# NettHier

./: .gitignore  README.md  audio_utils.py  config.py  dataloader.py  datapreprocessor.py  main.py  mic_inference.py  model_utils.py  record_custom_data.py  student.py  teacher.py  trainer.py
ESP_Servo/: .gitignore  sdkconfig
ESP_Servo/main/: CMakeLists.txt  ServoManager.cpp  ServoManager.h  idf_component.yml  main.cpp
esp32_model/: model_metadata.json  wakeword_model.h  wakeword_model.pt  wakeword_model_original.pt
